--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -6,7 +6,7 @@
 }
 
 .el-upload {
-  input[type="file"] {
+  input[type='file'] {
     display: none !important;
   }
 }
@@ -15,6 +15,10 @@
   display: none;
 }
 
+.el-tree-node__content {
+  height: 30px !important;
+  font-size: 14px !important;
+}
 
 // to fixed https://github.com/ElemeFE/element/issues/2461
 .el-dialog {
@@ -39,7 +43,7 @@
 // dropdown
 .el-dropdown-menu {
   a {
-    display: block
+    display: block;
   }
 }
 
